--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.3.0"
+    "@astrojs/tailwind": "^5.0.2",
+    "@tailwindcss/typography": "^0.5.10",
+    "astro": "^3.3.0",
+    "tailwindcss": "^3.3.3"
   }
 }
